--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="mask-icon" href="%PUBLIC_URL%/mages/icons/safari-pinned-tab.svg" color="#f25116">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/mages/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/mages/icons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/mages/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/mages/icons/android-chrome-192x192.png">
+
+    <meta name="apple-mobile-web-app-title" content="tw314">
+    <meta name="application-name" content="tw314">
+
+    <meta name="msapplication-TileColor" content="#f25116">
+    <meta name="theme-color" content="#f25116">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Aplicativo para filas. Não perca mais seu tempo!"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>tw314</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
