--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/e8718208b1.js" crossorigin="anonymous"></script>
     <title>tw314</title>
   </head>
