--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
-    <meta charset="utf-8" />
-    <link rel="mask-icon" href="%PUBLIC_URL%/images/icons/safari-pinned-tab.svg" color="#f25116">
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/icons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/images/icons/android-chrome-192x192.png">
+    <title>tw314</title>
 
+    <meta charset="utf-8" />
     <meta name="apple-mobile-web-app-title" content="tw314">
     <meta name="application-name" content="tw314">
 
@@ -20,6 +16,12 @@
       name="description"
       content="Aplicativo para filas. Não perca mais seu tempo!"
     />
+
+    <link rel="mask-icon" href="%PUBLIC_URL%/images/icons/safari-pinned-tab.svg" color="#f25116">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/icons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/images/icons/android-chrome-192x192.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -34,14 +36,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
-    <script src="https://kit.fontawesome.com/e8718208b1.js" crossorigin="anonymous"></script>
-    <title>tw314</title>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet preconnect"> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="modal-root"></div>
+    <script src="https://kit.fontawesome.com/e8718208b1.js" async crossorigin="anonymous"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
