--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,16 @@
       content="Aplicativo para filas. Não perca mais seu tempo!"
     />
 
-    <link rel="mask-icon" href="%PUBLIC_URL%/images/icons/safari-pinned-tab.svg" color="#f25116">
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/icons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/icons/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/images/icons/android-chrome-192x192.png">
+    <link rel="preconnect mask-icon" as="image" href="%PUBLIC_URL%/images/icons/safari-pinned-tab.svg" color="#f25116">
+    <link rel="preconnect apple-touch-icon" sizes="180x180" as="image" href="%PUBLIC_URL%/images/icons/apple-touch-icon.png">
+    <link rel="preconnect icon" type="image/png" sizes="16x16" as="image" href="%PUBLIC_URL%/images/icons/favicon-16x16.png">
+    <link rel="preconnect icon" type="image/png" sizes="32x32" as="image" href="%PUBLIC_URL%/images/icons/favicon-32x32.png">
+    <link rel="preconnect icon" type="image/png" sizes="192x192" as="image" href="%PUBLIC_URL%/images/icons/android-chrome-192x192.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -36,11 +36,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" rel="stylesheet preconnect"> 
+    <link rel="stylesheet preconnect" href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" as="font" type="font/woff2" crossorigin /> 
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div style=" height: 100vh; display: flex; justify-content: center; align-items: center;">
+        <img width="200" src="./images/icons/icon-512x512.png" alt="TW314 logo" />
+      </div>
+    </div>
     <div id="modal-root"></div>
     <script src="https://kit.fontawesome.com/e8718208b1.js" async crossorigin="anonymous"></script>
     <!--
