Adiciona correções de acessibilidade

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-    <title>tw314</title>
+    <title>App tw314. Não perca seu tempo</title>
 
     <meta charset="utf-8" />
     <meta name="apple-mobile-web-app-title" content="tw314">
@@ -17,11 +17,11 @@
       content="Aplicativo para filas. Não perca mais seu tempo!"
     />
 
-    <link rel="preconnect mask-icon" as="image" href="%PUBLIC_URL%/images/icons/safari-pinned-tab.svg" color="#f25116">
-    <link rel="preconnect apple-touch-icon" sizes="180x180" as="image" href="%PUBLIC_URL%/images/icons/apple-touch-icon.png">
-    <link rel="preconnect icon" type="image/png" sizes="16x16" as="image" href="%PUBLIC_URL%/images/icons/favicon-16x16.png">
-    <link rel="preconnect icon" type="image/png" sizes="32x32" as="image" href="%PUBLIC_URL%/images/icons/favicon-32x32.png">
-    <link rel="preconnect icon" type="image/png" sizes="192x192" as="image" href="%PUBLIC_URL%/images/icons/android-chrome-192x192.png">
+    <link rel="preload preconnect mask-icon" as="image" href="%PUBLIC_URL%/images/icons/safari-pinned-tab.svg" color="#f25116">
+    <link rel="preload preconnect apple-touch-icon" sizes="180x180" as="image" href="%PUBLIC_URL%/images/icons/apple-touch-icon.png">
+    <link rel="preload preconnect icon" type="image/png" sizes="16x16" as="image" href="%PUBLIC_URL%/images/icons/favicon-16x16.png">
+    <link rel="preload preconnect icon" type="image/png" sizes="32x32" as="image" href="%PUBLIC_URL%/images/icons/favicon-32x32.png">
+    <link rel="preload preconnect icon" type="image/png" sizes="192x192" as="image" href="%PUBLIC_URL%/images/icons/android-chrome-192x192.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -36,10 +36,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet preconnect" href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" as="font" type="font/woff2" crossorigin /> 
+    <link rel="preload stylesheet preconnect" href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap" as="font" type="font/woff2" crossorigin /> 
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      <h1>
+        You need to enable JavaScript to run this app.
+      </h1>
+    </noscript>
     <div id="root">
       <div style=" height: 100vh; display: flex; justify-content: center; align-items: center;">
         <img width="200" src="./images/icons/icon-512x512.png" alt="TW314 logo" />
