Corrige pontos de melhorias de acessibilidade do achecker

--- a/public/index.html
+++ b/public/index.html
@@ -40,13 +40,14 @@
   </head>
   <body>
     <noscript>
-      <h1>
-        You need to enable JavaScript to run this app.
-      </h1>
+      <blockquote>
+        <p>You need to enable JavaScript to run this <abbr title="Aplicativo mobile">app</abbr>.</p>
+      </blockquote>
     </noscript>
     <div id="root">
       <div style=" height: 100vh; display: flex; justify-content: center; align-items: center;">
-        <img width="200" src="./images/icons/icon-512x512.png" alt="TW314 logo" />
+        <img width="200" src="./images/icons/icon-512x512.png" alt="" aria-labelledby="logo-label" />
+        <p id="logo-label">Logo do tw314. Aguardando carregamento da página</p>
       </div>
     </div>
     <div id="modal-root"></div>
